# basiclings

./: .gitignore  Cargo.toml  LICENSE
.github/workflows/: rust.yml
lessons/: 0000-welcome.md  0001-closing-delimiter.md  0002-one-and-two-byte-tokens.md  0003-list-optimizations.md  0007-conditions.md
lessons/condition-optimizations/: 0008-conditions-avoid-ifs-easy.md  0009-conditions-avoid-ifs-harder.md  0010-conditions-use-max.md  0011-conditions-use-sum-easy.md  0012-conditions-use-sum-harder.md
lessons/list-optimizations/: 0004-list-optimizations-find-a-pattern-easy.md  0004-lists-find-a-pattern-easy.md  0006-list-optimizations-binompdf.md  0006-lists-binompdf.md
lessons/one-and-two-byte-tokens/: 0005-string-and-list-names.md
src/: cemu.rs  cli.rs  lesson.rs  main.rs  parser.rs  tools.rs
